# First_Assignment_Parallel

./: CMakeLists.txt  main.cpp
header/: Boid.h  constants.h
src/: Boid.cpp
